# tiliqua

./: .buildinfo  .gitmodules  README.md  bootloader.html  cover.html  dsp.html  genindex.html  gettingstarted.html  hardware.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  soc.html  technical.html  top.html
.doctrees/: bootloader.doctree  cover.doctree  dsp.doctree  environment.pickle  gettingstarted.doctree  hardware.doctree  index.doctree  install.doctree  soc.doctree  technical.doctree  top.doctree
.github/workflows/: docker.yml  documentation.yml  main.yml  setup-build.yml
_sources/: bootloader.rst.txt  gettingstarted.rst.txt  hardware.rst.txt  index.rst.txt  install.rst.txt  soc.rst.txt  technical.rst.txt  top.rst.txt
_static/: platformpicker.css  platformpicker.js
gateware/: .env.toolchain  .gitignore  .oss-cad-suite-version  Dockerfile  cmd.sh  cmds.sh  colors.py  flash.js  index.html  lxvid_sim.v  pyproject.toml  server.py  sim.cpp  usage.py  vectorscope.v  verilate-notrace.sh  verilate.sh
gateware/docs/: bootloader.rst  conf.py  cover.rst  dsp.rst  gettingstarted.rst  hardware.rst  index.rst  install.rst  technical.rst  top.rst
gateware/example-usb-audio/: channels_to_usb_stream.py  eurorack_pmod.py  tiliqua.py  top.py  usb_stream_to_channels.py  util.py
gateware/example-usb-audio/src/example_usb_audio/: __init__.py  channels_to_usb_stream.py  eurorack_pmod.py
gateware/scripts/: build_dmf.sh  build_soc.sh  flash_dmf.sh  sim_soc.sh
gateware/src/amaranth_future/: fixed.py  stream.py
gateware/src/boot/: top.py
gateware/src/boot/fw/: Cargo.toml  apfelaudio.csv  convert.py  coords.rs
gateware/src/boot/fw/src/: lib.rs  main.rs  opts.rs
gateware/src/boot_stub/: top.py
gateware/src/example_dsp/: ecpix5.py  sim_dsp_core.cpp  top.py
gateware/src/example_mirror/: top.py
gateware/src/example_soc/: .gitignore  top.py
gateware/src/example_soc/fw/: Cargo.toml
gateware/src/example_soc/fw/src/: draw.rs  i2c.rs  lib.rs  log.rs  main.rs  opts.rs
gateware/src/example_soc/hal/: Cargo.toml
gateware/src/example_soc/hal/src/: i2c.rs  lib.rs  timer.rs
gateware/src/example_soc/lib/src/: draw.rs  opt.rs
gateware/src/example_soc/pac/: Cargo.toml  Makefile
gateware/src/example_usb_audio/: __init__.py  audio_to_channels.py  channels_to_usb_stream.py  top.py  usb_stream_to_channels.py
gateware/src/example_usb_audio/fw/: Cargo.toml  memory.x
gateware/src/example_usb_audio/fw/src/: lib.rs  main.rs
gateware/src/example_vectorscope/: dvi_generator_sim.sv  lxvid.v  simple_720p.sv  top.py
gateware/src/example_vectorscope/sim/: sim.cpp
gateware/src/poly/: .gitignore  top.py
gateware/src/poly/fw/: Cargo.toml
gateware/src/poly/fw/src/: handlers.rs  lib.rs  main.rs  opts.rs
gateware/src/rs/: .gitignore  handlers.rs
gateware/src/rs/hal/: Cargo.toml  LICENSE.txt
gateware/src/rs/hal/src/: dma_display.rs  encoder.rs  i2c.rs  lib.rs  pca9635.rs  pmod.rs  polysynth.rs  serial.rs  si5351.rs  timer.rs  video.rs
gateware/src/rs/isr/: Cargo.toml
gateware/src/rs/isr/src/: lib.rs
gateware/src/rs/lib/: Cargo.toml  example-manifest.json
gateware/src/rs/lib/src/: draw.rs  dsp.rs  leds.rs  lib.rs  logger.rs  logo_coords.rs  manifest.rs  midi.rs  opt.rs  optif.rs  palette.rs  ui.rs
gateware/src/rs/pac/: Cargo.toml
gateware/src/selftest/: sim.cpp  top.py
gateware/src/selftest/fw/: Cargo.toml  build.rs
gateware/src/selftest/fw/src/: lib.rs  main.rs  opts.rs
gateware/src/sid/: top.py
gateware/src/sid/fw/: Cargo.toml
gateware/src/sid/fw/src/: handlers.rs  main.rs  opts.rs
gateware/src/tiliqua/: cache.py  cli.py  delay.py  delay_line.py  dsp.py  dtr.py  encoder.py  eurorack_pmod.py  eurorack_pmod_peripheral.py  flash.py  i2c.py  mac.py  midi.py  psram.py  psram_peripheral.py  raster.py  scope.py  sim.py  test_util.py  tiliqua_platform.py  tiliqua_pll.py  tiliqua_soc.py  types.py  usb_host.py  video.py
gateware/src/top/bootloader/: top.py
gateware/src/top/bootloader/fw/: Cargo.toml  example-manifest.json
gateware/src/top/bootloader/fw/src/: lib.rs  main.rs  manifest.rs  opts.rs
gateware/src/top/bootstub/: top.py
gateware/src/top/dsp/: sim_dsp_core.cpp  top.py
gateware/src/top/macro_osc/: top.py
gateware/src/top/macro_osc/fw/: Cargo.toml
gateware/src/top/macro_osc/fw/.cargo/: config.toml
gateware/src/top/macro_osc/fw/src/: lib.rs  main.rs  optif.rs  opts.rs
gateware/src/top/polysyn/: top.py
gateware/src/top/polysyn/fw/: Cargo.toml
gateware/src/top/polysyn/fw/.cargo/: config.toml
gateware/src/top/polysyn/fw/src/: lib.rs  main.rs  opts.rs
gateware/src/top/selftest/: .gitignore  sim.cpp  top.py
gateware/src/top/selftest/fw/: Cargo.toml
gateware/src/top/selftest/fw/.cargo/: config.toml
gateware/src/top/selftest/fw/src/: fpu_bench.rs  handlers.rs  lib.rs  main.rs  opts.rs
gateware/src/top/usb_audio/: channels_to_usb_stream.py  top.py
gateware/src/top/usb_host/: top.py
gateware/src/top/vectorscope_no_soc/: top.py
gateware/src/top/vectorscope_no_soc/sim/: sim.cpp  tb-cxxrtl.cpp
gateware/src/top/xbeam/: top.py
gateware/src/top/xbeam/fw/: Cargo.toml
gateware/src/top/xbeam/fw/.cargo/: config.toml
gateware/src/top/xbeam/fw/src/: lib.rs  main.rs  opts.rs
gateware/src/xbeam/: top.py
gateware/src/xbeam/fw/: Cargo.toml
gateware/src/xbeam/fw/src/: handlers.rs  lib.rs  main.rs  opts.rs
gateware/tests/: test_cache.py  test_delayln.py  test_dsp.py  test_fft.py  test_i2c.py  test_i2s.py  test_mac.py  test_midi.py  test_raster.py  test_ring.py  test_svf.py  test_usb.py
hardware/backpack/: backpack.csv  backpack.kicad_pcb  backpack.kicad_pro  backpack.kicad_sch  fp-lib-table  midi.kicad_sch  pmod_audio.kicad_sch  power.kicad_sch  rp2040_jtag.kicad_sch  usb.kicad_sch
hardware/fab/: backpack_bom_jlc.csv  backpack_cpl_jlc.csv
hardware/libs/: 10029449-001RLF.step  467651001.stp  IND-SMD_L5.5-W5.2-H3.0.step  IND-SMD_L5.5-W5.2-H3.0.wrl  KEY-SMD_4P-L5.2-W5.2-H1.5-LS6.4-P3.70.step  KEY-SMD_4P-L5.2-W5.2-H1.5-LS6.4-P3.70.wrl  SMD_BD5.0-D3.5.step  SMD_BD5.0-D3.5.wrl  (+11 more)
(+39 files in other folders)
