[project]
name = "example-usb-audio"
version = "0.0.0"
description = "USB Audio example for Tiliqua"

requires-python = ">=3.9,<=3.11"
dependencies = [
    "amaranth[builtin-yosys]~=0.5",
    "amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards@main",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc@main",
    "amaranth-stdio @ git+https://github.com/amaranth-lang/amaranth-stdio@main",
    "luna-usb @ git+https://github.com/schnommus/luna@seb/iso-amaranth5",
    "scipy>=1.9.3",
    "matplotlib>=3.9.0",
]

[tool.pdm.dev-dependencies]
test = [
    "pytest",
]

[tool.pdm.scripts]
test = { cmd = "pytest" }
colors_vectorscope = { call = "example_vectorscope.top:colors()" }
