[project]
name = "example-usb-audio"
version = "0.0.0"
description = "USB Audio example for Tiliqua"

requires-python = ">=3.11"
dependencies = [
    "amaranth~=0.5",
    "amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards@main",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc@main",
    "amaranth-stdio @ git+https://github.com/amaranth-lang/amaranth-stdio@main",
    "luna-usb @ git+https://github.com/schnommus/luna@seb/iso-amaranth5",
    "scipy>=1.9.3",
    "matplotlib>=3.9.0",
    "sentinel @ file:///home/seb/dev/sentinel",
]

[tool.pdm.dev-dependencies]
test = [
    "pytest",
]

[tool.pdm.scripts]
# Top-level bitstreams
bootloader         = "src/top/bootloader/top.py"
dsp                = "src/top/dsp/top.py"
selftest           = "src/top/selftest/top.py"
vectorscope_no_soc = "src/top/vectorscope_no_soc/top.py"
bootstub           = "src/top/bootstub/top.py"
polysyn            = "src/top/polysyn/top.py"
usb_audio          = "src/top/usb_audio/top.py"
xbeam              = "src/top/xbeam/top.py"
# Additional utilities
test               = { cmd = "pytest" }
colors_vectorscope = { call = "example_vectorscope.top:colors()" }
