[package]
name = "tiliqua-fw"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
embedded-hal = "=1.0.0"
riscv = { version = "=0.10.1", features = ["critical-section-single-hart"] }
riscv-rt = { version = "=0.11.0" }
panic-halt = "0.2.0"
tiliqua-pac = { path="../pac", default-features = false, features = ["critical-section", "vexriscv"] }
tiliqua-hal = { path="../hal", default-features = false, features = ["vexriscv"]}
micromath = "2.1.0"
