[package]
name = "tiliqua-pac"
version = "0.0.1"
edition = "2021"
rust-version = "1.68"
include = ["src/**/*", "README.md", "device.x", "build.rs"]

[package.metadata.docs.rs]
default-target = "riscv32imac-unknown-none-elf"
targets = [
    "riscv32i-unknown-none-elf",
    "riscv32imac-unknown-none-elf",
]

[lib]
test = false
bench = false

[features]
default = [
    "vexriscv",
]
rt = ["riscv-rt"]
minerva = []
vexriscv = []

[dependencies]
critical-section = { version = "=1.2.0", optional = true }
riscv = "=0.11.1"
riscv-rt = { version = "=0.12.2", optional = true }
vcell = "=0.1.3"
